@@ -1,3 +1,6 @@
+* Thu Nov 01 2018 Jeanne Greulich <jeanne,greulich@onyxpoint.com> - 6.1.0-0
+- static asset updates for puppet 5
+
 * Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
 - Changed $named::install::ensure from 'latest' to 'installed'
   - It will also respect `simp_options::package_ensure`
